--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,8 @@
     <div id="container">
         <div id="header"><h1>Edunote</h1></div>
         <div id="outermain">
-            <div id="nav">hwdp</div>
-            <div id="main">hwdp</div>
+            <div id="nav"></div>
+            <div id="main"></div>
         </div>
         <div id="footer"></div>
     </div>
